package com.tjudream.designpattern.interpreter.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-30 13:44
 *
 * @author mengxs@lenovocloud.com
 */
public class Context {
}
